# traincheck

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  test_config.yaml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql.yml  publish.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
examples/accelerate/: default_config.yaml
examples/bare/: hostfile.txt  run.sh
examples/hydra/: config.yaml
examples/hydra/model/: llama_70b.yaml  mixtral_8x7b.yaml
examples/hydra/parallelism/: tp2_pp4.yaml
examples/k8s_crd/: Dockerfile  configmap.yaml  model-config.yaml  pytorchjob.yaml
examples/lsf/: train.lsf
examples/native/: job.traincheck.yaml
examples/pbs/: ds_config.json  train.pbs
examples/ray/: cluster.yaml  job.py  requirements.txt
examples/sge/: train.sge
examples/skypilot/: task.yaml
examples/slurm/: requirements.txt  train.py  train.sbatch
examples/submitit/: job.py
examples/torchx/: .torchxconfig  component.py  run.sh
examples/trainjob/: trainjob.yaml
mining/: PLAN.md  README.md  candidates.jsonl  rules_verified.jsonl  validate_candidates.py
src/traincheck/: __init__.py  __main__.py  cli.py  core.py  detect.py  hostprobe.py  ir.py  resolve.py  rules.py  utils.py  validator.py  verification.py
src/traincheck/adapters/: __init__.py  accelerate.py  bare.py  deepspeed.py  hpc_shell.py  k8s.py  lsf.py  pbs.py  ray.py  sge.py  skypilot.py  slurm.py  submitit.py  torchx.py
src/traincheck/extractors/: __init__.py  accelerate.py  hydra.py  image.py  lockfile.py  shell.py
src/traincheck/rules/: __init__.py  config_coherence.py  version_incompat.py
tests/: test_accelerate_adapter.py  test_bare_adapter.py  test_cli.py  test_comm_env.py  test_deepspeed_adapter.py  test_detect.py  test_examples.py  test_gang_scheduling.py  test_hostprobe.py  test_hydra_extractor.py  test_image_extractor.py  test_k8s_adapter.py  test_k8s_launcher.py  test_launcher_fields.py  test_lockfile_extractor.py  test_lsf_adapter.py  test_mining_gate.py  test_parallelism_extraction.py  test_pbs_adapter.py  test_ray_adapter.py  test_resolve.py  test_resolve_stacks.py  test_sge_adapter.py  test_shell_extractor.py  test_skypilot_adapter.py  test_slurm_adapter.py  test_slurm_gpu_request.py  test_submitit_adapter.py  test_torchx_adapter.py  test_traincheck.py  test_trainjob_adapter.py  test_utils.py  test_validator.py  test_version_incompat_rules.py
