[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The importable module stays `traincheck` even though the PyPI
# distribution is named `traincheck-lint`, so hatchling can't infer the
# package directory from the project name - point it at the real one.
packages = ["src/traincheck"]

[project]
name = "traincheck-lint"
version = "0.1.0"
description = "A configuration linter for distributed GPU training that catches misconfigurations before they cause failures."
readme = "README.md"
authors = [
  {name = "Victoria Besedina", email = "victoria.besedina@gmail.com"}
]
maintainers = [
  {name = "Victoria Besedina", email = "victoria.besedina@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "bashlex",
  "pyyaml",
  # Always installed (not just for <3.11): lockfile.py's stdlib/tomli
  # fallback is chosen at runtime via sys.version_info, but static analysis
  # (ty) checks both import branches regardless of the active Python
  # version, so tomli must resolve even where it isn't actually used.
  "tomli",
]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/darkleia/traincheck/issues"
changelog = "https://github.com/darkleia/traincheck/releases"
documentation = "https://darkleia.github.io/traincheck/"
homepage = "https://github.com/darkleia/traincheck"

[project.scripts]
traincheck = "traincheck.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.src]
# examples/ holds illustrative launcher fixtures parsed via ast/regex by our
# own extractors, not real code - they import packages (ray, torchx,
# submitit) that aren't project dependencies on purpose. scripts/ is a
# maintainer-only release helper that assumes a newer Python than the
# package itself supports. Neither should be type-checked as project code.
exclude = ["examples/", "scripts/"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.flake8-bugbear]
# typer.Argument()/typer.Option() as parameter defaults is typer's own
# documented CLI pattern, not the mutable-default footgun B008 exists to
# catch - tell bugbear these specific calls are safe there.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
